# Zenith-Exchange

./: .gitignore  Architecture.md  Cargo.toml  SKILL.MD  docker-compose.yml  doubt.md  init.sql  repeat.md  tasks.md
services/api-gateway/: Cargo.toml
services/api-gateway/src/: main.rs
services/auth-service/src/: main.rs
services/market-data/: Cargo.toml
services/market-data/src/: main.rs
services/matching-engine/: Cargo.toml
services/matching-engine/src/: main.rs  orderbook.rs
services/risk-engine/: Cargo.toml
services/risk-engine/src/: checks.rs  main.rs
services/wallet-service/: Cargo.toml
services/wallet-service/src/: main.rs
services/websocket-gateway/: Cargo.toml
services/websocket-gateway/src/: main.rs
shared/db/: Cargo.toml
shared/db/src/: lib.rs
shared/domain/: Cargo.toml
shared/domain/src/: lib.rs
shared/kafka/: Cargo.toml
shared/kafka/src/: lib.rs
shared/redis-client/: Cargo.toml
shared/redis-client/src/: lib.rs
