[workspace]
members = [
    "services/api-gateway",
    "services/auth-service",
    "services/market-data",
    "services/matching-engine",
    "services/risk-engine",
    "services/wallet-service",
    "services/websocket-gateway",
    "shared/domain",
    "shared/db",
    "shared/kafka",
    "shared/redis-client"
]
resolver = "3"

[workspace.dependencies]
domain = { path = "shared/domain" }
db = { path = "shared/db" }
kafka = { path = "shared/kafka" }
redis-client = { path = "shared/redis-client" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
rdkafka = { version = "0.39.0" }

# actix-web-actors = "4"
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = { workspace = true }
# rust_decimal = { version = "1", features = ["serde"] }
# rust_decimal_macros = { version = "1", features = ["serde"] }
# uuid = { version = "1", features = ["v4"] }