[workspace]
members = [
    "services/api-gateway",
    "services/auth-service",
    "services/market-data",
    "services/matching-engine",
    "services/risk-engine",
    "services/wallet-service",
    "services/websocket-gateway",
    "shared/domain",
    "shared/db",
    "shared/kafka",
    "shared/redis-client"
]
resolver = "3"

[workspace.dependencies]
domain = { path = "shared/domain" }
db = { path = "shared/db" }
kafka = { path = "shared/kafka" }
redis-client = { path = "shared/redis-client" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdkafka = { version = "0.39.0" }
rust_decimal = {version = "1.30"}
rust_decimal_macros = {version = "1.30"}
uuid = { version = "1.4", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "rust_decimal", "chrono" ] }
tokio = { version = "1" }
dotenvy = { version = "0.15" }
chrono = { version = "0.4", features = ["serde"] }

