[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
domain = {workspace = true}
rdkafka = {workspace = true}
# shared-domain = { path = "../../shared/domain" }
# shared-kafka = { path = "../../shared/kafka" }
# shared-db = { path = "../../shared/db" }
# shared-redis-client = { path = "../../shared/redis-client" }
# actix-web = "4"
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# uuid = { version = "1.0", features = ["v4", "serde"] }
# dotenvy = "0.15"
