[package]
name = "risk-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { workspace = true }
kafka = { workspace = true }
db = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rdkafka = { workspace = true }
sqlx = { workspace = true }
rust_decimal = {workspace = true}