[package]
name = "wallet-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# shared-domain = { path = "../../shared/domain" }
# shared-kafka = { path = "../../shared/kafka" }
# shared-db = { path = "../../shared/db" }
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
