[package]
name = "websocket-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# shared-domain = { path = "../../shared/domain" }
# shared-redis-client = { path = "../../shared/redis-client" }
# actix-web = "4"
# actix-web-actors = "4"
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
