[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = {workspace = true}
rust_decimal = {workspace = true}
rust_decimal_macros = {workspace = true}
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true }
sqlx = { workspace = true }
    